--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Movimiento Asturias</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+    <link rel="shortcut icon" href="img/icono_pestaña.png">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -27,7 +28,7 @@
         <li class=""><a class="link" href="#inicio">Inicio</a></li>
         <li class=""><a class="link"  href="#eventos">Eventos</a></li>
         <li class=""><a class="link"  href="#galeria">Galería</a></li>   
-        <li class=""><a class="link" href="#inicio"><img class="menuImg" src="img/logotipo_negro.png" alt="Logo"></a></li>
+        <li class=""><a class="link" href="#inicio"><img class="menuImg" src="img/LOGO.png" alt="Logo"></a></li>
         <li class=""><a class="link"  href="#nosotros">Nosotros</a></li>
         <li class=""><a class="link"  href="#contacto">Contacto</a></li>
         <li class=""><a href="#" class="btnMenu">Talleres de Lectura</a></li>
@@ -36,7 +37,7 @@
 </header>
 <section id="inicio">
   <div class="d-flex align-items-center flex-column justify-content-center banner">
-      <img src="img/pequeno2.png" style="width: 40%; height: 30%;">
+      <img src="img/logo_inicio.png" style="width: 40%; height: 30%;">
       <div class="text-center p-5">
         <h1>¡Bienvenidos!</h1>
         <h5>Somos el colectivo Movimiento Asturias, buscamos propiciar espacios de convivenvia que inviten a crear un hábito de lectura para aumentar el desarrollo cultural a nivel local.</h5>
@@ -55,7 +56,7 @@
      <div class="card text-center">
      <h3>Talleres de Lectura</h3>
      <img class="linea" src="img/line_galeria.png">
-    <img src="img/pequeno2.png" class="card-img-top" alt="...">
+    <img src="img/evento_1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <p class="card-text">Talleres de lectura con actividades divertidas y de aprendizaje para niños y niñas de 8 a 12 años.</p>
         <div class="row">
@@ -86,7 +87,7 @@
      <div class="card text-center">
       <h3>Mala Palabra</h3>
       <img class="linea" src="img/line_galeria.png">
-    <img src="img/pequeno2.png" class="card-img-top" alt="...">
+    <img src="img/evento_2.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <p class="card-text">Espacio de diálogo donde se abordan diversos temas polémicos por medio de lecturas mensuales de poesía.</p>
         <div class="row">
@@ -117,7 +118,7 @@
      <div class="card text-center">
      <h3>Puntos de Lectura</h3>
      <img class="linea" src="img/line_galeria.png">
-    <img src="img/pequeno2.png" class="card-img-top" alt="...">
+    <img src="img/evento_3.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <p class="card-text">Pequeñas Bibliotecas colocadas en espacios públicos para cultivar el hábito y gusto por la lectura.</p>
         <div class="row">
@@ -159,6 +160,10 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -178,6 +183,18 @@
         </div>
         <div class="carousel-item">
           <img src="img/galeria_6.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/galeria_7.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/galeria_8.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/galeria_9.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/galeria_10.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -205,7 +222,7 @@
         <p>La organización surge formalmente en 2015 con la integración del club de lectura en el kiosko del parque central del municipio de Esquipulas. A partir de ahí comenzó una dinámica de reuniones semanales para hablar de libros, lecturas particulares, y conversar sobre la lectura en común que sugería alternativamente cada uno de los miembros del club.</p>
       </div>
       <div class="col-md-4 text-center ">
-        <img class="sobremi_img" alt="sobremiImg" src="img/pequeno.png">
+        <img class="sobremi_img" alt="sobremiImg" src="img/libros.jpg">
       </div>  
         <div class="col-md-4">
       </div>
@@ -233,7 +250,7 @@
     <p>¡Queremos seguir en contacto contigo! Si tienes alguna pregunta, comentario, sugerencia o deseas formar parte del Movimiento Asturas ¡Con gusto leeremos tus mensajes!</p>
   </div>
   <div class="col-md-6 text-md-right divContacto  text-center">    
-    <img class="contactoImg" src="img/pequeno2.png">
+    <img class="contactoImg" src="img/contacto.jpg">
   </div>
   <div class="col-md-6  divContacto">
     <form class="formulario">
@@ -272,7 +289,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <img class="" src="img/pequeno2.png">
+      <img class="" src="img/pop_up.jpg">
     </div>
   </div>
 </div>
