--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Movimiento Asturias</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-    <link rel="shortcut icon" href="img/icono_pestaña.png">
+    <link rel="shortcut icon" href="img/img_pestaña.jpg">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -31,7 +31,7 @@
         <li class=""><a class="link" href="#inicio"><img class="menuImg" src="img/LOGO.png" alt="Logo"></a></li>
         <li class=""><a class="link"  href="#nosotros">Nosotros</a></li>
         <li class=""><a class="link"  href="#contacto">Contacto</a></li>
-        <li class=""><a href="#" class="btnMenu">Talleres de Lectura</a></li>
+        <li class=""><a href="includes/talleres.html" class="btnMenu">Talleres de Lectura</a></li>
     </ul>
   </nav>
 </header>
