--- a/index.html
+++ b/index.html
@@ -12,15 +12,8 @@
 </head>
 <body>
 <header>
-    <section id="logo">
-        <div class="row">
-            <div class="col-12 text-center">
-                <img src="img/logotipo_negro.png" alt="Logo">
-            </div>
-        </div>
-    </section>
     <div class="menu_bar">
-        <a href="#inicio"><img src="img/logotipo_negro.png" alt="Logo"></a>
+        <a href="#inicio"><img src="img/LOGO.png" alt="Logo"></a>
         <span class="bt-menu"><i class="fa fa-bars" aria-hidden="true"></i></span>
     </div>
   <nav class="menu fixed">
@@ -52,7 +45,7 @@
     <h2>Próximos Eventos</h2>
     <p>Aqui te mostramos los próximos eventos en donde podrás participar. Estos se irán actualizando conforme realicemos nuevos proyectos. ¡Los esperamos!</p>
   </div>
- <div class=" col-4 proyectoImg"> 
+ <div class=" col-12 col-lg-4 proyectoImg"> 
      <div class="card text-center">
      <h3>Talleres de Lectura</h3>
      <img class="linea" src="img/line_galeria.png">
@@ -83,7 +76,7 @@
     </div>
   </div>
 </div>
-<div class=" col-4 proyectoImg"> 
+<div class=" col-12 col-lg-4 proyectoImg"> 
      <div class="card text-center">
       <h3>Mala Palabra</h3>
       <img class="linea" src="img/line_galeria.png">
@@ -114,7 +107,7 @@
     </div>
   </div>
 </div>
-<div class=" col-4 proyectoImg"> 
+<div class=" col-12 col-lg-4 proyectoImg"> 
      <div class="card text-center">
      <h3>Puntos de Lectura</h3>
      <img class="linea" src="img/line_galeria.png">
@@ -211,18 +204,14 @@
 <section id="nosotros">
   <div class="container">
     <div class="row">
-      <div class="col-12 text-center sobremiTitle1">
-        <h2>Sobre Mí</h2>
-        <img class="linea" src="img/line_sobremi.png">
-      </div>
         <div class="col-md-8 text-justify "> 
-      <div class="sobremiTitle2">
+      <div class="">
         <h2>Sobre Nosotros</h2>
       </div> 
         <p>La organización surge formalmente en 2015 con la integración del club de lectura en el kiosko del parque central del municipio de Esquipulas. A partir de ahí comenzó una dinámica de reuniones semanales para hablar de libros, lecturas particulares, y conversar sobre la lectura en común que sugería alternativamente cada uno de los miembros del club.</p>
       </div>
       <div class="col-md-4 text-center ">
-        <img class="sobremi_img" alt="sobremiImg" src="img/libros.jpg">
+        <img class="sobremi_img" alt="libros" src="img/libros.jpg">
       </div>  
         <div class="col-md-4">
       </div>
