--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <section id="nosotros">
   <div class="container">
     <div class="row">
-        <div class="col-md-8 text-justify "> 
+        <div class="col-md-8 nosotrosText "> 
       <div class="">
         <h2>Sobre Nosotros</h2>
       </div> 
@@ -215,13 +215,13 @@
       </div>  
         <div class="col-md-4">
       </div>
-        <div class="col-md-8 text-justify pt-5 pb-5"> 
+        <div class="col-md-8 nosotrosText pt-5 pb-5"> 
       <div class="">
         <h2>Misión</h2>
       </div> 
-        <p>La misión del Movimiento Asturias es contribuir a la educación de los habitantes de Esquipulas, especialmente de los niños, inculcando el h{abito de lectura como un proceso esencial en la construcción cultural.</p>
+        <p>La misión del Movimiento Asturias es contribuir a la educación de los habitantes de Esquipulas, especialmente de los niños, inculcando el habito de lectura como un proceso esencial en la construcción cultural.</p>
       </div>
-        <div class="col-md-8 text-justify pb-5  "> 
+        <div class="col-md-8 nosotrosText pb-5  "> 
       <div class="">
         <h2>Visión</h2>
       </div> 
