--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <div class="">
         <h2>Sobre Nosotros</h2>
       </div> 
-        <p>La organización surge formalmente en 2015 con la integración del club de lectura en el kiosko del parque central del municipio de Esquipulas. A partir de ahí comenzó una dinámica de reuniones semanales para hablar de libros, lecturas particulares, y conversar sobre la lectura en común que sugería alternativamente cada uno de los miembros del club.</p>
+        <p>La organización surge formalmente en 2015 con la integración del club de lectura en el kiosko del parque central del municipio de Esquipulas. A partir de ahí comenzó una dinámica de reuniones semanales para hablar de libros, lecturas particulares, y conversar sobre la lectura en común que sugería alternativamente cada uno de los miembros.</p>
       </div>
       <div class="col-md-4 text-center ">
         <img class="sobremi_img" alt="libros" src="img/libros.jpg">
